Backporting to JDK 8 No10